# postilla

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  VISION.md  package-lock.json  package.json  release.sh  test_linux_webview.rs  test_transcription.sh
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: .tauri-updater-key.pub  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  license.rs  llm.rs  main.rs  remote_llm.rs  test_license.rs  transcribe.rs
src-tauri/src/speaker/: mod.rs  speaker_cluster.rs  speaker_embedding.rs  speaker_engine.rs  speaker_matching.rs  speaker_repository.rs  speaker_service.rs  speaker_vad.rs
workers/: get-license.js  wrangler.toml
