[package]
name = "tauri-app"
version = "0.7.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
chrono = { version = "0.4.45", features = ["serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2.3.1"
flate2 = "1.1.9"
tar = "0.4.46"
reqwest = { version = "0.12", features = ["json", "stream"] }
zip = "8.6.0"
futures-util = "0.3.32"
machine-uid = "0.6.0"
base64 = { version = "0.22.1", features = ["std"] }
local-ip-address = "0.6.2"
tokio = { version = "1", features = ["rt", "macros"] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0.2", features = ["v2_8"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

